# ETS-LORA-Test

./: README.md
Code from Redwan/rak3112_ets_careflow_anemometer_espidf/Rak3112_ETS_CAREFLOW/main/: CMakeLists.txt  idf_component.yml  main.cpp  touch.cpp  touch.h
Code from Redwan/rak3112_with_ETS_and_Careflow_ESPidf/: README.md
Code from Redwan/rak3112_with_ETS_and_Careflow_ESPidf/Rak3112_ETS_CAREFLOW/: CMakeLists.txt  sdkconfig.defaults
Code from Redwan/rak3112_with_ETS_and_Careflow_ESPidf/Rak3112_ETS_CAREFLOW/libraries/SX126x-Arduino/src/mac/: LoRaMac.cpp
Code from Redwan/rak3112_with_ETS_and_Careflow_ESPidf/Rak3112_ETS_CAREFLOW/libraries/TFT_eSPI/: User_Setup.h
Code from Redwan/rak3112_with_ETS_and_Careflow_ESPidf/Rak3112_ETS_CAREFLOW/libraries/TFT_eSPI/TFT_Drivers/: ILI9341_Init.h
Code from Redwan/rak3112_with_ETS_and_Careflow_ESPidf/Rak3112_ETS_CAREFLOW/libraries/TFT_eSPI/examples/PNG Images/Flash_transparent_PNG/: png_support.ino
Code from Redwan/rak_ETS_Careflow_Arduino_code/: rak3112_with_ETS_AND_CAREFLOW.ino
Observation Doc/: RS485_Review_Analysis.xlsx  ~$RS485_Review_Analysis.xlsx
